# SparkX

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  render.yaml  requirements.txt  run.py  seed.py
alembic/: env.py
alembic/versions/: 6520ba02fd4e_initial_tables.py  da6331a3d9e7_add_pathforge_generated_roadmaps.py
app/: config.py  database.py  main.py
app/models/: __init__.py  feedback.py  levels.py  mentors.py  pathforge.py  progress.py  roadmaps.py  tasks.py  users.py
app/routers/: auth.py  feedback.py  leaderboard.py  levels.py  mentors.py  pathforge.py  progress.py  roadmap.py  tasks.py
app/schemas/: feedback.py  learning.py  user.py
app/services/: auth_utils.py  email_service.py  pathforge_service.py  streak_service.py  xp_service.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: index.js
frontend/src/components/: FeedbackModal.jsx  FeedbackSection.jsx  StarBackground.jsx
frontend/src/components/layout/: Footer.jsx  Navbar.jsx
frontend/src/components/ui/: AnimatedButton.jsx  GlassCard.jsx  StreakCounter.jsx  TaskCard.jsx  XPBar.jsx
frontend/src/pages/: AllFeedbackPage.jsx  AuthPage.jsx  Dashboard.jsx  ForgotPasswordPage.jsx  LandingPage.jsx  LeaderboardPage.jsx  MentorsPage.jsx  PathForgePage.jsx  ProfilePage.jsx  ResetPasswordPage.jsx  RoadmapPage.jsx
frontend/src/store/: authStore.jsx
