[project]
name = "gamified-learning-tracker-platform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.136.1",
    "psycopg2-binary>=2.9.12",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.41,<2.1",
    "uvicorn>=0.47.0",
    "python-jose[cryptography]==3.3.0",
    "aiosmtplib>=5.1.0",
    "google-generativeai>=0.3.0",
]
